# rdk-x5-clean-robot

./: README.md  README_cn.md
gd32_lower_controller/: README.md
gd32_lower_controller/APPLICATION/: main.c  main.h  robot_init.h
gd32_lower_controller/APPLICATION/chasis/: chasis.c  chasis.h
gd32_lower_controller/APPLICATION/exchange/: exchange.c  exchange.h  test.c
gd32_lower_controller/APPLICATION/gimbal/: gimbal.c  gimbal.h
gd32_lower_controller/APPLICATION/task/: robot_task.h  robot_task_handles.h
gd32_lower_controller/BSP/can/: can.c  can.h
gd32_lower_controller/BSP/delay/: delay.c  delay.h
gd32_lower_controller/BSP/fifo/: fifo.c  fifo.h
gd32_lower_controller/BSP/message/: message.c  message.h
gd32_lower_controller/BSP/pwm/: pwm.c  pwm.h
gd32_lower_controller/BSP/spi/: spi.c  spi.h
gd32_lower_controller/BSP/sys/: sys.c  sys.h
gd32_lower_controller/BSP/uart/: UART4.c  UART4.h  uart1.c  uart1.h  uart3.c  uart3.h  usart.c  usart.h  usart0.c  usart0.h  usart5.c  usart5.h
gd32_lower_controller/CMSIS/: system_gd32f4xx.c
gd32_lower_controller/FreeRTOS/include/: FreeRTOSConfig.h
gd32_lower_controller/MODULES/AS5048/: AS5048.c  AS5048.h
gd32_lower_controller/MODULES/Emm_v5/: Emm_V5.c
gd32_lower_controller/MODULES/IM_TEST/: IM_TEST.c  IM_TEST.h  arm_fastmath_fallback.c
gd32_lower_controller/MODULES/Lcd/: lcd.c  lcd.h
gd32_lower_controller/MODULES/LobotServoController/: LobotServoController.c  LobotServoController.h  bool.h
gd32_lower_controller/MODULES/im948/: im948_CMD.c  im948_CMD.h  mpu_cal.c  mpu_cal.h
gd32_lower_controller/MODULES/kalman/: arm_math.c  arm_math.h  kalman_filter.c
gd32_lower_controller/MODULES/key/: key.c  key.h
gd32_lower_controller/MODULES/led/: led.c  led.h
gd32_lower_controller/MODULES/motor/: encoder.c  encoder.h  motor.c  motor.h  odom.c  odom.h
gd32_lower_controller/MODULES/pid/: pid.c  pid.h
gd32_lower_controller/MODULES/servo/: servo.c  servo.h
gd32_lower_controller/Startup/: gd32f4xx_it.c
gd32_lower_controller/project/: template.uvoptx  template.uvprojx
ros2_upper_controller/my_ros/src/gd32_base_driver/: package.xml  setup.cfg  setup.py
ros2_upper_controller/my_ros/src/gd32_base_driver/config/: ekf.yaml
ros2_upper_controller/my_ros/src/gd32_base_driver/gd32_base_driver/: chassis_driver.py  protocol.py  protocol.py.bak_arm_status_raw
ros2_upper_controller/my_ros/src/gd32_base_driver/launch/: base_driver.launch.py
ros2_upper_controller/my_ros/src/my_arm_control/: package.xml  setup.cfg  setup.py
ros2_upper_controller/my_ros/src/my_arm_control/config/: arm_controller.yaml  ik.yaml  joint_map.yaml
ros2_upper_controller/my_ros/src/my_arm_control/my_arm_control/: __init__.py  arm_controller_node.py  ik.py  joint_cli.py  joint_state_node.py  trajectory_interp.py  vision_pick_node.py
ros2_upper_controller/my_ros/src/my_mapping_pkg/: package.xml  setup.cfg  setup.py
ros2_upper_controller/my_ros/src/my_mapping_pkg/maps/: my_map.pgm  my_map.yaml  my_map_518.pgm  my_map_518.yaml  my_map_6.20.pgm  my_map_6.20.yaml
ros2_upper_controller/my_ros/src/robot_brain/: package.xml  setup.py
ros2_upper_controller/my_ros/src/robot_brain/config/: available_actions.yaml  llm_prompt_template.j2
ros2_upper_controller/my_ros/src/robot_brain/resource/: robot_brain
ros2_upper_controller/my_ros/src/robot_brain/robot_brain/: robot_state_aggregator.py  task_manager_node.py
ros2_upper_controller/my_ros/src/robot_bringup/: package.xml  setup.py
ros2_upper_controller/my_ros/src/robot_bringup/config/: slam.yaml
ros2_upper_controller/my_ros/src/robot_bringup/launch/: arm_only.launch.py  (+4 more)
ros2_upper_controller/my_ros/src/robot_description/: package.xml  setup.py
ros2_upper_controller/my_ros/src/robot_mqtt_bridge/: package.xml  package.xml.bak_before_mqtt_fix  setup.cfg  setup.py
ros2_upper_controller/my_ros/src/robot_msgs/: CMakeLists.txt  package.xml
ros2_upper_controller/my_ros/src/robot_msgs/action/: CalibratePlaneHeight.action  CleanArea.action  NavigateToObject.action  PickObject.action  PlaceObject.action  ReturnHome.action
ros2_upper_controller/my_ros/src/robot_msgs/msg/: ArmStatus.msg  Detection.msg  JointTarget.msg  ObjectOnPlane.msg  ObjectPose.msg  PlaneHeight.msg  RobotState.msg
ros2_upper_controller/my_ros/src/robot_nav2/: package.xml  setup.py
ros2_upper_controller/my_ros/src/robot_skills/: package.xml  setup.py
ros2_upper_controller/my_ros/src/robot_test/: package.xml  setup.cfg  setup.py
ros2_upper_controller/my_ros/src/robot_test/launch/: test_clean_loop.launch.py
ros2_upper_controller/my_ros/src/robot_test/resource/: robot_test
ros2_upper_controller/my_ros/src/robot_test/robot_test/: clean_table_test_node.py
ros2_upper_controller/my_ros/src/robot_vision/: CMakeLists.txt  package.xml  setup.py
ros2_upper_controller/my_ros/src/robot_vision/config/: camera_intrinsics.yaml  vision_pipeline.yaml
ros2_upper_controller/my_ros/src/robot_vision/include/: detector_backend.hpp  vision_utils.hpp
ros2_upper_controller/my_ros/src/robot_vision/launch/: robot_vision.launch.py
ros2_upper_controller/my_ros/src/robot_vision/robot_vision/: camera_info_publisher.py  dummy_backend.cpp  laser_range_node.py  mipi_yolo_node.py  object_pose_node.py  object_tracker.py  plane_calibration_node.py  rdk_yolo_backend_stub.cpp  usb_camera_node.cpp  vision_utils.cpp  yolo_detector_node.cpp
ros2_upper_controller/ros2_ws/src/kws_ros2/: package.xml  setup.cfg  setup.py
ros2_upper_controller/ros2_ws/src/rdk_ai_gateway_ros/: README.md  README_cn.md  requirements.txt
ros2_upper_controller/ros2_ws/src/sherpa_onnx_ros2/: package.xml  setup.cfg  setup.py
ros2_upper_controller/ros2_ws/src/tts_ros2/: package.xml  setup.cfg  setup.py
ros2_upper_controller/ros2_ws/src/voice_interaction/: package.xml  setup.py
(+67 files in other folders)
